src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__range__range_upper_inf.snap
---
source: src/expr/src/scalar/func/impls/range.rs
expression: "#[sqlfunc(sqlname = \"range_upper_inf\")]\nfn range_upper_inf<'a>(a: Range<Datum<'a>>) -> bool {\n    match a.inner {\n        None => false,\n        Some(inner) => inner.upper.bound.is_none(),\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct RangeUpperInf;
impl crate::func::EagerUnaryFunc for RangeUpperInf {
    type Input<'a> = Range<Datum<'a>>;
    type Output<'a> = bool;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        range_upper_inf(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for RangeUpperInf {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("range_upper_inf")
    }
}
fn range_upper_inf<'a>(a: Range<Datum<'a>>) -> bool {
    match a.inner {
        None => false,
        Some(inner) => inner.upper.bound.is_none(),
    }
}
